--- a/src/templates/wave_equation.html
+++ b/src/templates/wave_equation.html
@@ -8,8 +8,8 @@
 
     <!-- User Input field -->
     <form method="post">
-        <label for="input-a">A visualisation of the equation y = sin(ax):</label>
-        <input type="number" id="input-a" name="input-a" placeholder="1">
+        <label for="user_input">A visualisation of the equation y = sin(ax):</label>
+        <input type="number" id="user_input" name="user_input" value="{{ user_input }}" placeholder="1" required>
         <button type="update">Update Graph</button>
     </form>
 
