--- a/src/templates/weather.html
+++ b/src/templates/weather.html
@@ -6,56 +6,43 @@
 {% block content %}
 
     <h1>Weather</h1>
+
     <form method="post">
         <label for="lat">Enter a latitude:</label>
-        <input type="number" step="0.0001" id="lat" name="lat" value="{{ lat }}" required>
+        <input id="lat" name="lat" required step="0.0001" type="number" value="{{ lat }}">
         <label for="lon">Enter a longitude:</label>
-        <input type="number" step="0.0001" id="lon" name="lon" value="{{ lon }}" required>
+        <input id="lon" name="lon" required step="0.0001" type="number" value="{{ lon }}">
         <button type="submit">Fetch</button>
     </form>
 
-    {% if weather_data %}
-    <h2>Weather Data:</h2>
-    <table class="table-info table-bordered">
-
-        <thead>
-            <tr>
-                <th scope="col"> Key </th>
-                <th scope="col"> Value </th>
-            </tr>
-        </thead>
-
-        <tbody>
-            {% for key, value in weather_data.items() %}
-            <tr>
-                <td>{{ key }}</td>
-                <td>
-                    {% if value is mapping %}
-                        <table>
-                            <tbody>
-                                {% for subkey, subvalue in value.items() %}
-                                <tr>
-                                    <td>{{ subkey }}</td>
-                                    <td>{{ subvalue }}</td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    {% else %}
-                        {{ value }}
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-
-    </table>
-    {% endif %}
-
     {% if table %}
         <table class="table table-hover">
-        {{ table|safe }}
+            {{ table|safe }}
         </table>
     {% endif %}
+
+
+    <div class="widget-container" >
+        <div id="openweathermap-widget-11" ></div>
+        <script src='//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/d3.min.js'></script>
+        <script lang="JavaScript" class="weather-forecast">
+                window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];
+
+                window.myWidgetParam.push({
+                id: 11,
+                cityid: '2643743',
+                appid: 'ff9837a52fe8f9c488b6182543bf324c',
+                units: 'metric',
+                containerid: 'openweathermap-widget-11',  });
+
+                (function() {
+                    var script = document.createElement('script');
+                    script.async = true;
+                    script.charset = "utf-8";
+                    script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";
+                    var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);
+                })();
+        </script>
+    </div>
 
 {% endblock %}
